search z-index fixed

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -15,7 +15,6 @@ body {
     left: 0px;
     width: 100%;
     height: 100%;
-    z-index: 1;
 }
 
 .header.more {
